@@ -1,40 +1,37 @@
 #--------- Generic stuff all our Dockerfiles should start with so we get caching ------------
-FROM tomcat:8.0-jre8
-MAINTAINER Tim Sutton<tim@linfiniti.com>
+FROM tomcat:9.0.5-jre8
+MAINTAINER joseph.b.murphy1@gmail.com
+#credit: thinkWhere<info@thinkwhere.com>
+#Credit: Tim Sutton<tim@linfiniti.com>
+# Debian 9 (Stretch) /TOMCAT 9.0.1/Oracle JDK 8/GEOSERVER 2.12.1
 
 RUN  export DEBIAN_FRONTEND=noninteractive
 ENV  DEBIAN_FRONTEND noninteractive
 RUN  dpkg-divert --local --rename --add /sbin/initctl
-#RUN  ln -s /bin/true /sbin/initctl
+COPY ./openjdk-8-jre_8u162-b12-1_deb9u1_amd64.deb \
+     ./libtcnative-1_1.2.14-1_amd64.deb \
+     ./libjpeg-turbo-official_1.5.2_amd64.deb /tmp/
+RUN apt-get -y update && apt-get -y upgrade
+RUN apt-get install -y libgtk-3-0 libatk-wrapper-java-jni libpulse0
+RUN dpkg -i /tmp/openjdk-8-jre_8u162-b12-1_deb9u1_amd64.deb
+RUN echo "Yes, do as I say!" | apt-get remove --force-yes sed
+RUN echo "Yes, do as I say!" | apt-get remove --force-yes login
+RUN apt-get remove -y libsndfile1 libtiff5
+RUN dpkg -i /tmp/libtcnative-1_1.2.14-1_amd64.deb
+RUN dpkg --remove --force-depends libjpeg62-turbo libcups2 libwayland-client0 libwayland-cursor0 \
+         libwayland-server0 libwayland-egl1 libvorbis0a libvorbisenc2 \
+         libglib2.0-0 libcairo2 libcairo-gobject2 libpangocairo-1.0-0 \
+         librsvg2-2 librsvg2-common uidmap libudev1 libsystemd0 libxml2 \
+         libk5crypto3 libkrb5support0 libcroco3
+RUN dpkg -i /tmp/libjpeg-turbo-official_1.5.2_amd64.deb
 
-RUN apt-get -y update
 
-#Install extra fonts to use with sld font markers
-RUN apt-get install -y  fonts-cantarell lmodern ttf-aenigma ttf-georgewilliams ttf-bitstream-vera ttf-sjfonts tv-fonts \
-    build-essential libapr1-dev libssl-dev default-jdk
+
 #-------------Application Specific Stuff ----------------------------------------------------
-
-ARG GS_VERSION=2.13.0
+ENV GS_VERSION 2.12.1
 ENV GEOSERVER_DATA_DIR /opt/geoserver/data_dir
-ENV ENABLE_JSONP true
-ENV MAX_FILTER_RULES 20
-ENV OPTIMIZE_LINE_WIDTH false
-#ENV GEOWEBCACHE_CACHE_DIR /opt/geoserver/data_dir/gwc
-
-
-ENV GEOSERVER_OPTS "-Djava.awt.headless=true -server -Xms2G -Xmx4G -Xrs -XX:PerfDataSamplingInterval=500 \
- -Dorg.geotools.referencing.forceXY=true -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParallelGC -XX:NewRatio=2 \
- -XX:+CMSClassUnloadingEnabled"
-#-XX:+UseConcMarkSweepGC use this rather than parallel GC?  
-ENV JAVA_OPTS "$JAVA_OPTS $GEOSERVER_OPTS"
-ENV GDAL_DATA /usr/local/gdal_data
-ENV LD_LIBRARY_PATH /usr/local/gdal_native_libs:/usr/local/apr/lib:/opt/libjpeg-turbo/lib64
-ENV GEOSERVER_LOG_LOCATION /opt/geoserver/data_dir/logs/geoserver.log
 
 RUN mkdir -p $GEOSERVER_DATA_DIR
-
-ADD logs $GEOSERVER_DATA_DIR/logs
-
 
 # Unset Java related ENVs since they may change with Oracle JDK
 ENV JAVA_VERSION=
@@ -46,74 +43,13 @@ ENV JAVA_HOME /usr/lib/jvm/default-java
 
 ADD resources /tmp/resources
 
-# Install libjpeg-turbo for that specific geoserver version
-RUN if [ ! -f /tmp/resources/libjpeg-turbo-official_1.5.3_amd64.deb ]; then \
-    wget https://tenet.dl.sourceforge.net/project/libjpeg-turbo/1.5.3/libjpeg-turbo-official_1.5.3_amd64.deb -P /tmp/resources;\
-    fi; \
-    cd /tmp/resources/ && \
-    dpkg -i libjpeg-turbo-official_1.5.3_amd64.deb
+# Optionally add JAI and ImageIO for improved performance.
 
-
-# Install tomcat APR
-RUN if [ ! -f /tmp/resources/apr-1.6.3.tar.gz ]; then \
-    wget -c wget  http://mirror.za.web4africa.net/apache//apr/apr-1.6.3.tar.gz \
-      -P /tmp/resources; \
-    fi; \
-    tar -xzf /tmp/resources/apr-1.6.3.tar.gz -C /tmp/resources/ && \
-    cd /tmp/resources/apr-1.6.3 && \
-    touch libtoolT && ./configure && make -j 4 && make install
-
-# Install tomcat native
-RUN if [ ! -f /tmp/resources/tomcat-native-1.2.16-src.tar.gz ]; then \
-    wget -c http://mirror.za.web4africa.net/apache/tomcat/tomcat-connectors/native/1.2.16/source/tomcat-native-1.2.16-src.tar.gz \
-      -P /tmp/resources; \
-    fi; \
-    tar -xzf /tmp/resources/tomcat-native-1.2.16-src.tar.gz -C /tmp/resources/ && \
-    cd /tmp/resources/tomcat-native-1.2.16-src/native && \
-    ./configure --with-java-home=${JAVA_HOME} --with-apr=/usr/local/apr && make -j 4 && make install
-
-
-# If a matching Oracle JDK tar.gz exists in /tmp/resources, move it to /var/cache/oracle-jdk8-installer
-# where oracle-java8-installer will detect it
-RUN if ls /tmp/resources/*jdk-*-linux-x64.tar.gz > /dev/null 2>&1; then \
-      mkdir /var/cache/oracle-jdk8-installer && \
-      mv /tmp/resources/*jdk-*-linux-x64.tar.gz /var/cache/oracle-jdk8-installer/; \
-    fi;
-
-# Install Oracle JDK (and uninstall OpenJDK JRE) if the build-arg ORACLE_JDK = true or an Oracle tar.gz
-# was found in /tmp/resources
-ARG ORACLE_JDK=false
-RUN if ls /var/cache/oracle-jdk8-installer/*jdk-*-linux-x64.tar.gz > /dev/null 2>&1 || [ "$ORACLE_JDK" = true ]; then \
-       apt-get autoremove --purge -y openjdk-8-jre-headless && \
-       echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true \
-         | debconf-set-selections && \
-       echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" \
-         > /etc/apt/sources.list.d/webupd8team-java.list && \
-       apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
-       rm -rf /var/lib/apt/lists/* && \
-       apt-get update && \
-       apt-get install -y oracle-java8-installer oracle-java8-set-default && \
-       ln -s --force /usr/lib/jvm/java-8-oracle /usr/lib/jvm/default-java && \
-       rm -rf /var/lib/apt/lists/* && \
-       rm -rf /var/cache/oracle-jdk8-installer; \
-       if [ -f /tmp/resources/jce_policy.zip ]; then \
-         unzip -j /tmp/resources/jce_policy.zip -d /tmp/jce_policy && \
-         mv /tmp/jce_policy/*.jar $JAVA_HOME/jre/lib/security/; \
-       fi; \
-    fi;
-
-#Add JAI and ImageIO for great speedy speed.
 WORKDIR /tmp
-# A little logic that will fetch the JAI and JAI ImageIO tar file if it
-# is not available locally in the resources dir
-RUN if [ ! -f /tmp/resources/jai-1_1_3-lib-linux-amd64.tar.gz ]; then \
-    wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64.tar.gz -P /tmp/resources;\
-    fi; \
-    if [ ! -f /tmp/resources/jai_imageio-1_1-lib-linux-amd64.tar.gz ]; then \
-    wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64.tar.gz -P /tmp/resources;\
-    fi; \
-    mv resources/jai-1_1_3-lib-linux-amd64.tar.gz ./ && \
-    mv resources/jai_imageio-1_1-lib-linux-amd64.tar.gz ./ && \
+ARG JAI_IMAGEIO=true
+RUN if [ "$JAI_IMAGEIO" = true ]; then \
+    wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64.tar.gz && \
+    wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64.tar.gz && \
     gunzip -c jai-1_1_3-lib-linux-amd64.tar.gz | tar xf - && \
     gunzip -c jai_imageio-1_1-lib-linux-amd64.tar.gz | tar xf - && \
     mv /tmp/jai-1_1_3/lib/*.jar $JAVA_HOME/jre/lib/ext/ && \
@@ -123,18 +59,33 @@ RUN if [ ! -f /tmp/resources/jai-1_1_3-lib-linux-amd64.tar.gz ]; then \
     rm /tmp/jai-1_1_3-lib-linux-amd64.tar.gz && \
     rm -r /tmp/jai-1_1_3 && \
     rm /tmp/jai_imageio-1_1-lib-linux-amd64.tar.gz && \
-    rm -r /tmp/jai_imageio-1_1
+    rm -r /tmp/jai_imageio-1_1; \
+    fi
+
+# Add GDAL native libraries if the build-arg GDAL_NATIVE = true
+ARG GDAL_NATIVE=true
+# EWC and JP2ECW are subjected to licence restrictions
+
+ENV GDAL_DATA $CATALINA_HOME/gdal-data
+ENV LD_LIBRARY_PATH $JAVA_HOME/jre/lib/amd64/gdal:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/opt/libjpeg-turbo/lib64
+RUN if [ "$GDAL_NATIVE" = true ]; then \
+    wget http://demo.geo-solutions.it/share/github/imageio-ext/releases/1.1.X/1.1.12/native/gdal/gdal-data.zip && \
+    wget http://demo.geo-solutions.it/share/github/imageio-ext/releases/1.1.X/1.1.12/native/gdal/linux/gdal192-Ubuntu12-gcc4.6.3-x86_64.tar.gz && \
+    unzip gdal-data.zip -d $CATALINA_HOME && \
+    mkdir $JAVA_HOME/jre/lib/amd64/gdal && \
+    tar -xvf gdal192-Ubuntu12-gcc4.6.3-x86_64.tar.gz -C $JAVA_HOME/jre/lib/amd64/gdal; \
+    fi
+
 WORKDIR $CATALINA_HOME
 
-# A little logic that will fetch the geoserver war zip file if it
-# is not available locally in the resources dir
-RUN if [ ! -f /tmp/resources/geoserver-${GS_VERSION}.zip ]; then \
-    wget -c http://downloads.sourceforge.net/project/geoserver/GeoServer/${GS_VERSION}/geoserver-${GS_VERSION}-war.zip \
-      -O /tmp/resources/geoserver-${GS_VERSION}.zip; \
+# Fetch the geoserver war file if it
+# is not available locally in the resources dir and
+RUN if [ ! -f /tmp/resources/geoserver.zip ]; then \
+    wget -c https://downloads.sourceforge.net/project/geoserver/GeoServer/2.12.1/geoserver-2.12.1-war.zip \
+      -O /tmp/resources/geoserver.zip; \
     fi; \
-    unzip /tmp/resources/geoserver-${GS_VERSION}.zip -d /tmp/geoserver \
+    unzip /tmp/resources/geoserver.zip -d /tmp/geoserver \
     && unzip /tmp/geoserver/geoserver.war -d $CATALINA_HOME/webapps/geoserver \
-    && cp -r $CATALINA_HOME/webapps/geoserver/data/user_projections $GEOSERVER_DATA_DIR \
     && rm -rf $CATALINA_HOME/webapps/geoserver/data \
     && rm -rf /tmp/geoserver
 
@@ -145,21 +96,30 @@ RUN if ls /tmp/resources/plugins/*.zip > /dev/null 2>&1; then \
         && mv /tmp/gs_plugin/*.jar $CATALINA_HOME/webapps/geoserver/WEB-INF/lib/ \
         && rm -rf /tmp/gs_plugin; \
       done; \
-    fi; \
-    if ls /tmp/resources/plugins/*gdal*.tar.gz > /dev/null 2>&1; then \
-    mkdir /usr/local/gdal_data && mkdir /usr/local/gdal_native_libs; \
-    unzip /tmp/resources/plugins/gdal/gdal-data.zip -d /usr/local/gdal_data && \
-    tar xzf /tmp/resources/plugins/gdal192-Ubuntu12-gcc4.6.3-x86_64.tar.gz -C /usr/local/gdal_native_libs; \
     fi;
 
+COPY ./sqljdbc4-4.0.jar $CATALINA_HOME/webapps/geoserver/WEB-INF/lib/
+
 # Overlay files and directories in resources/overlays if they exist
-RUN rm -f /tmp/resources/overlays/README.txt && \
-    if ls /tmp/resources/overlays/* > /dev/null 2>&1; then \
+RUN if ls /tmp/resources/overlays/* > /dev/null 2>&1; then \
       cp -rf /tmp/resources/overlays/* /; \
     fi;
 
+# install Font files in resources/fonts if they exist
+RUN if ls /tmp/resources/fonts/*.ttf > /dev/null 2>&1; then \
+      cp -rf /tmp/resources/fonts/*.ttf /usr/share/fonts/truetype/; \
+	fi;
+
+# Optionally disable GeoWebCache
+# (Note that this forcibly removes all gwc files. This may cause errors with extensions that depend on gwc files
+#   including:  Inspire; Control-Flow; )
+ARG DISABLE_GWC=false
+RUN if [ "$DISABLE_GWC" = true ]; then \
+      rm $CATALINA_HOME/webapps/geoserver/WEB-INF/lib/*gwc*; \
+    fi;
+
 # Optionally remove Tomcat manager, docs, and examples
-ARG TOMCAT_EXTRAS=true
+ARG TOMCAT_EXTRAS=false
 RUN if [ "$TOMCAT_EXTRAS" = false ]; then \
     rm -rf $CATALINA_HOME/webapps/ROOT && \
     rm -rf $CATALINA_HOME/webapps/docs && \
@@ -168,5 +128,48 @@ RUN if [ "$TOMCAT_EXTRAS" = false ]; then \
     rm -rf $CATALINA_HOME/webapps/manager; \
   fi;
 
+# Add unlimited crypto support
+ENV JRE_HOME $JAVA_HOME/jre
+COPY ./UnlimitedJCEPolicyJDK8/*.jar $JRE_HOME/lib/security/
+
+#RUN export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/opt/libjpeg-turbo/lib64
+
+#webxml update for environment
+RUN rm /usr/local/tomcat/webapps/geoserver/WEB-INF/web.xml
+COPY ./web.xml /usr/local/tomcat/webapps/geoserver/WEB-INF/
+
 # Delete resources after installation
-RUN rm -rf /tmp/resources
+RUN rm -rf /tmp/resources \
+    rm /tmp/*.zip \
+    rm /tmp/*.deb \
+    rm /tmp/*.tar.gz \
+    rm /usr/lib/mime/packages/util-linux
+
+
+#Make Java DATA_DIR servlet path
+RUN mkdir /var/lib/geoserver_data
+#Set the GEOSERVER_DATA_DIR
+RUN export GEOSERVER_DATA_DIR=/var/lib/geoserver_data
+RUN printf '\nCATALINA_OPTS="-DGEOSERVER_DATA_DIR=/var/lib/geoserver_data"' >> $CATALINA_HOME/bin/setclasspath.sh
+
+#ENV GEOSERVER_HOME /opt/geoserver
+
+#Vulnerablities remediation section
+RUN rm /usr/local/tomcat/webapps/geoserver/WEB-INF/lib/commons-fileupload-1.2.1.jar
+RUN rm /var/lib/dpkg/info/util-linux.*
+
+#change Container from Root User to ONEUSER
+RUN groupadd -r oneuser -g 999 && \
+    useradd -d /home/oneuser -u 999 -m -s /bin/bash -g oneuser oneuser
+RUN chown -R oneuser:oneuser /usr/local/tomcat
+#clean up prior to switching to oneuser
+RUN dpkg --remove --force-depends multiarch-support passwd apt libapt-pkg5.0 libgssapi-krb5-2 libkrb5-3 \
+         libidn11 openssl libssl1.1 wget unzip 	libgraphite2-3
+RUN rm -rf /var/lib/apt/lists/*
+USER oneuser
+
+HEALTHCHECK --start-period=5m --interval=20m --timeout=5s CMD curl -f "http://localhost:8080/geoserver/ows?service=wfs&version=1.1.0&request=GetCapabilities" || exit 1
+
+#ENTRYPOINT "/opt/geoserver/bin/startup.sh"
+#CMD "/opt/geoserver/bin/startup.sh"
+EXPOSE 8080
